--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,13 @@
         to jump into app!</string>
     <string name="grade">Grade:</string>
     <string name="views_nr">Views nr:</string>
+    <string name="cooking_time">Cooking time: </string>
+    <string name="likes">Likes: </string>
+    <string name="good_for">Good for: </string>
+    <string name="ingredients">Ingredients</string>
+    <string name="cooking_steps">Cooking Steps</string>
+    <string name="comments_section">Comments</string>
+    <string name="about_meal">About:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
