Create account screen implemented, settings screen in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_title">Jedzonko</string>
     <string name="action_settings">Settings</string>
     <string name="login_btn">Log in</string>
-    <string name="login_et">E-mail</string>
+    <string name="login_et">example@com.pl</string>
     <string name="password_et">Password</string>
     <string name="title_activity_main_menu">MainMenu</string>
     <string name="your_week_btn">Your week plan</string>
@@ -64,6 +64,24 @@
     <string name="comments_section">Comments</string>
     <string name="about_meal">About:</string>
     <string name="login_failed">Login failed</string>
+    <string name="email">E-mail</string>
+    <string name="email2">E-mail:</string>
+    <string name="password">Password</string>
+    <string name="password2">Password:</string>
+    <string name="no_account">No account?</string>
+    <string name="create_one"><u>Create one!</u></string>
+    <string name="continue_without_login">Continue without login</string>
+    <string name="facebook_app_id">581419312749031</string>
+    <string name="fb_login_protocol_scheme">fb581419312749031</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="create_account">Create account</string>
+    <string name="account_info"><b>Account information</b></string>
+    <string name="location">Location:</string>
+    <string name="meals_prefs"><b>Meals preferences</b></string>
+    <string name="portions_per_meal">Portions per meal:</string>
+    <string name="meals_per_mealplan">Meals per meal plan:</string>
+    <string name="cooking_time_label">Preferred cooking time:</string>
+    <string name="food_preferences"><b>Food preferences</b></string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
