--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="cooking_steps">Cooking Steps</string>
     <string name="comments_section">Comments:</string>
     <string name="about_meal">About meal:</string>
-    <string name="login_failed">Login failed</string>
+    <string name="login_failed">Incorrect e-mail or password.</string>
     <string name="email">E-mail</string>
     <string name="email2">E-mail:</string>
     <string name="password">Password</string>
@@ -96,6 +96,8 @@
     <string name="location_entry_hint">Country, city</string>
     <string name="loading">Loading...</string>
     <string name="your_plan"><b>Your plan:</b></string>
+    <string name="list_of_ingredients"><b>List of ingredients</b></string>
+    <string name="amount">Amount</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
