--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,8 @@
     <string name="your_plan"><b>Your plan:</b></string>
     <string name="list_of_ingredients"><b>List of ingredients</b></string>
     <string name="amount">Amount</string>
+    <string name="cooking_steps2"><b>Cooking steps</b></string>
+    <string name="step">Step</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
