--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="amount">Amount</string>
     <string name="cooking_steps2"><b>Cooking steps</b></string>
     <string name="step">Step</string>
+    <string name="cooking_mode">Cooking mode</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
