--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="password_not_match_current">Current password you provided is incorrect.</string>
     <string name="male_sex">Male</string>
     <string name="female_sex">Female</string>
+    <string name="add_chip">+ Add</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
