--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,14 @@
     <string name="female_sex">Female</string>
     <string name="add_chip">+ Add</string>
     <string name="specify_height">Specify height</string>
+    <string name="weight_edition_label">Type in your weight in</string>
+    <string name="height_edition_label">Type in your height in</string>
+    <string name="centimeters">centimeters</string>
+    <string name="inches">inches</string>
+    <string name="kg">kg</string>
+    <string name="lbs">cm</string>
+    <string name="height_out_of_range">Value must be between 100 and 300</string>
+    <string name="weight_out_of_range">Value must be between 30 and 400</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
