--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="lbs">cm</string>
     <string name="height_out_of_range">Value must be between 100 and 300</string>
     <string name="weight_out_of_range">Value must be between 30 and 400</string>
+    <string name="other">Other</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
