--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,21 +118,10 @@
     <string name="height_out_of_range">Value must be between 100 and 300</string>
     <string name="weight_out_of_range">Value must be between 30 and 400</string>
     <string name="other">Other</string>
+    <string name="username">Username</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="temp_recipe">Masę serową wyłożyć do tortownicy i wstawić do piekarnika nagrzanego do 170
-        stopni C. Piec przez 60 minut. Sernik studzić stopniowo wyjmując z piekarnika (najpierw po
-        trochu otwierając drzwiczki i lekko wysuwając sernik, w końcu wyjąć z piekarnika).
-        Zrumieniony wierzch sernika posypać cukrem pudrem lub polać polewą czekoladową.
-    Masę serową wyłożyć do tortownicy i wstawić do piekarnika nagrzanego do 170
-        stopni C. Piec przez 60 minut. Sernik studzić stopniowo wyjmując z piekarnika (najpierw po
-        trochu otwierając drzwiczki i lekko wysuwając sernik, w końcu wyjąć z piekarnika).
-        Zrumieniony wierzch sernika posypać cukrem pudrem lub polać polewą czekoladową.
-    Masę serową wyłożyć do tortownicy i wstawić do piekarnika nagrzanego do 170
-        stopni C. Piec przez 60 minut. Sernik studzić stopniowo wyjmując z piekarnika (najpierw po
-        trochu otwierając drzwiczki i lekko wysuwając sernik, w końcu wyjąć z piekarnika).
-        Zrumieniony wierzch sernika posypać cukrem pudrem lub polać polewą czekoladową.</string>
     <string name="title_activity_change_location">Map</string>
     <string name="title_activity_edit_location">Map</string>
 </resources>
