--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,5 @@
     <string name="thirteenmin">30</string>
     <string name="fortyfivemin">45</string>
     <string name="sixteenmin">60</string>
+    <string name="five">5</string>
 </resources>
