Clean up in fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,4 +146,5 @@
     <string name="fortyfivemin">45</string>
     <string name="sixteenmin">60</string>
     <string name="five">5</string>
+    <string name="finish">finish</string>
 </resources>
