--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="diet_low_carb">Low carb</string>
     <string name="diet_keto">Ketogenic</string>
     <string name="allergy_gluten">Gluten</string>
-    <string name="allergy_diary">Diary</string>
+    <string name="allergy_dairy">Dairy</string>
     <string name="allergy_peanut">Peanuts</string>
     <string name="allergy_treenuts">Tree nuts</string>
     <string name="allergy_soy">Soy</string>
@@ -147,4 +147,9 @@
     <string name="sixteenmin">60</string>
     <string name="five">5</string>
     <string name="finish">finish</string>
+    <string name="soup">Soup</string>
+    <string name="fish">Fish</string>
+    <string name="pasta">Pasta</string>
+    <string name="what_type_of_recipe_you_don_t_like_cooking">What type of recipe you don\'t like cooking</string>
+    <string name="grill">Grill</string>
 </resources>
