--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="pasta">Pasta</string>
     <string name="what_type_of_recipe_you_don_t_like_cooking">What type of recipe you don\'t like cooking</string>
     <string name="grill">Grill</string>
+    <string name="meals_planer_logo">Meals planer logo</string>
 </resources>
