--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
         please contact administrator for help.</string>
     <string name="invalid_email">Invalid email. Please correct.</string>
     <string name="sign_up_incomplete_data">You need to fill in all the fields!</string>
+    <string name="all">All</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
