--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,11 +95,13 @@
     <string name="confirm">Confirm</string>
     <string name="location_entry_hint">Country, city</string>
     <string name="loading">Loading...</string>
+    <string name="delete">Delete</string>
     <string name="your_plan"><b>Your plan:</b></string>
     <string name="list_of_ingredients"><b>List of ingredients</b></string>
     <string name="amount">Amount</string>
     <string name="cooking_steps2"><b>Cooking steps</b></string>
     <string name="step">Step</string>
+    <string name="shopping_list">Shopping list</string>
     <string name="search">Search...</string>
     <string name="cooking_mode">Cooking mode</string>
     <string name="password_confirmation_failed">Password and confrimation don\'t match.</string>
