Nutrition properly connected to server, showing data properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,7 +197,7 @@
     <string name="vit_d">Vit. D</string>
     <string name="vit_e">Vit. E</string>
     <string name="vit_k">Vit. K</string>
-    <string name="foliate">Foliate</string>
+    <string name="folate">Folate</string>
     <string name="calcium">Calcium</string>
     <string name="copper">Copper</string>
     <string name="iron">Iron</string>
