--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,5 +211,5 @@
     <string name="vitamin_targets">Vitamin targets</string>
     <string name="mineral_targets">Mineral targets</string>
     <string name="do_it_later">Do it later</string>
-
+    <string name="nutrition_fetch_error">Error occurred while fetching data. Try again later.</string>
 </resources>
