--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,6 @@
     <string name="mineral_targets">Mineral targets</string>
     <string name="do_it_later">Do it later</string>
     <string name="nutrition_fetch_error">Error occurred while fetching data. Try again later.</string>
+    <string name="add_meal_dialog_msg">Add to:</string>
+    <string name="add_to_eaten_today">Meals eaten today</string>
 </resources>
