--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,5 @@
     <string name="meal_per_plan_label">Meals per plan</string>
     <string name="general_unexpected_error">Ups, something went wrong.</string>
     <string name="recipe_fetch_error">Error occurred while fetching recipe data</string>
+    <string name="shopping_list_empty">Shopping list is empty.</string>
 </resources>
